fix; logo still not showing

--- a/public/admin/styles.css
+++ b/public/admin/styles.css
@@ -1,7 +1,3 @@
-@font-face {
-	font-family: Playfair Display;
-	src: url('../fonts/PlayfairDisplay-VariableFont_wght.ttf');
-}
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +7,7 @@ html, body {
     background-color: hsl(205, 13%, 33%);
     width : 100vw;
     box-sizing: border-box;
-    font-family: Playfaire Display, serif;
+    font-family: serif, Arial;
 }
 p {
     margin: 0;
@@ -67,10 +63,6 @@ p {
     margin: 0;
     position: relative;
     right: 0;
-    -webkit-transition-duration: 0s; 
-    transition-duration: 0s;
-	-webkit-transition-delay: 0.2s; 
-    transition-delay: 0.2s;
     transform: translateX(15px);
 }
 .button-menu span:before, .button-menu span:after {
@@ -81,7 +73,7 @@ p {
 .button-menu span, .button-menu span:before, .button-menu span:after {
     width: 35px;
 	height: 4px;
-	background-color: var(--color-secondary);
+	background-color: hsl(196, 100%, 97%);
 	display: block;
 }
 .button-menu span:before{
